# nightwatch

./: .gitignore  Dockerfile  PLAN.md  README.md  TODO-docker.md  continuation.md  docker-compose.yml  install.sh  package-lock.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: pages.yml  pi-vm-tests.yml  test.yml
config/: default.yaml  docker.yaml  vm-test.yaml
dashboard-ui/: .env.pi  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
dashboard-ui/convex/: alertRules.ts  alerts.ts  schema.ts  settings.ts  sharing.ts  system.ts  vitals.ts
dashboard-ui/convex/_generated/: api.d.ts  api.js  dataModel.d.ts  server.d.ts  server.js
dashboard-ui/src/app/: globals.css  layout.tsx  page.tsx
dashboard-ui/src/hooks/: useAudioMonitor.ts  useNightwatchData.ts
dashboard-ui/src/lib/: ip-scanner.ts  wifi-api.ts
docs/: FUSION.md  SENSORS.md
docs/setup/: 404.html  index.html  index.txt
hardware/: SENSOR_SPECS.md  SHOPPING_LIST.md  radar_wiring_diagram.html
hardware/3d_prints/: DESIGN_SPECS.md  radar_wall_enclosure.scad
nightwatch/: __init__.py  __main__.py
nightwatch/bridge/: __init__.py  convex.py
nightwatch/core/: __init__.py  config.py  engine.py  events.py  fusion.py
nightwatch/dashboard/: __init__.py  server.py
nightwatch/detectors/: __init__.py  base.py
nightwatch/setup/: __init__.py  first_boot.py  hotspot.py  portal.py  provisioning.py
scripts/: deploy-convex.sh  fix-hotspot.sh  radar_test.py  radar_viz.py  radar_web_viz.py  self-update.sh  test-setup.sh
scripts/vm/: radar-simulator.py  setup-pi-vm.sh  virtual-serial.sh
systemd/: convex-backend.service  nightwatch-convex.service  nightwatch-dashboard.service  nightwatch.service
tests/: __init__.py  conftest.py
tests/bridge/: __init__.py  test_convex.py
tests/core/: test_config.py  test_engine.py  test_events.py  test_fusion.py  test_notifiers.py
tests/dashboard/: test_server.py
tests/detectors/: test_audio.py  test_base.py  test_bcg.py  test_radar.py
tests/integration/: test_onboarding_flow.py
tests/setup/: test_first_boot.py  test_hotspot.py  test_portal.py  test_provisioning.py
(+149 files in other folders)
